# arbitrary-bit-sized-numbers

./: .gitignore  CMakeLists.txt  README.md
include/: ArbitraryFloat.h  ArbitrarySignedInt.h  ArbitraryUnsignedInt.h
include/concepts/: BitAccessible.h  BitAnalyzable.h  BitCopyable.h  BitManipulable.h  ByteAccessible.h  ByteAnalyzable.h  ByteCopyable.h  ByteManipulable.h  Storage.h  StorageProvider.h
include/core/float/: ArbitraryFloat.h
include/core/float/impl/: ArbitraryFloatImpl.h  arithmetic.inl  assignment.inl  byte_conversion.inl  checked_ops.inl  comparison.inl  component_access.inl  constructors.inl  conversions.inl  ieee754_queries.inl  next_representable.inl  rounding.inl  special_values.inl  string_representation.inl  unary_ops.inl  utility.inl
include/core/float/utility_ops/: ArbitraryFloatUtilityOps.h  basic_ops.inl  exponential_logarithmic.inl  fused_ops.inl  hyperbolic.inl  power.inl  special_functions.inl  trigonometric.inl
include/core/signed-int/: ArbitrarySignedInt.h
include/core/signed-int/impl/: ArbitrarySignedIntImpl.h  arithmetic.inl  bit_access.inl  bit_analysis.inl  bit_manipulation.inl  bitwise.inl  byte_conversion.inl  checked_ops.inl  comparison.inl  constructor.inl  conversions.inl  overflowing_ops.inl  saturating_ops.inl  static_properties.inl  string_representation.inl  stringify.inl  unary_ops.inl  utility_ops.inl  wrapping_ops.inl
include/core/unsigned-int/: ArbitraryUnsignedInt.h
include/core/unsigned-int/impl/: ArbitraryUnsignedIntImpl.h  arithmetic.inl  bit_access.inl  bit_analysis.inl  bit_manipulation.inl  bitwise.inl  byte_conversion.inl  checked_ops.inl  comparison.inl  constructor.inl  conversions.inl  overflowing_ops.inl  saturating_ops.inl  static_properties.inl  string_representation.inl  stringify.inl  unary_ops.inl  utility_ops.inl  wrapping_ops.inl
include/interfaces/: IBitAccessible.h  IBitAnalyzable.h  IBitCopyable.h  IBitManipulable.h  IByteAccessible.h  IByteAnalyzable.h  IByteCopyable.h  IByteManipulable.h  IStorage.h  PortableBitUtils.cpp
include/storage/: CPUStorage.h
include/storage/cpu-storage/: CPUStorage.h
include/storage/cpu-storage/impl/: CPUStorageImpl.h  CPUStorage_BitAccessible.inl  CPUStorage_BitAnalyzable.inl  CPUStorage_BitCopyable.inl  CPUStorage_BitManipulable.inl  CPUStorage_ByteAccessible.inl  CPUStorage_ByteAnalyzable.inl  CPUStorage_ByteCopyable.inl  CPUStorage_ByteManipulable.inl
src/: ArbitraryFloat.cpp  ArbitrarySignedInt.cpp  ArbitraryUnsignedInt.cpp
src/storage/: CPUStorage.cpp
test/: CPUStorageTest.cpp  SignedIntTest.cpp  UnsignedIntTest.cpp  UnsignedIntTestWithOffset.cpp  signedinttest.cpp
